# simy_city

./: .gitignore  LICENSE  README.md  index.html  pyproject.toml
.github/workflows/: ci.yml  pages.yml
data_sources/: layers.yaml  registry.yaml
docs/: architecture.md  backlog.md  contributing.md  data-sources.md  feedback-loops.md  personas.md  prior-art.md  roadmap.md  stakeholders.md
examples/: 78738_walkthrough.md
simy_city/: __init__.py  cli.py  perspectives.py  registry.py  standoffs.py
tests/: test_registry.py
tests/js/: model-logic.test.mjs
tools/: build_model_json.py
web/: explore.html  index.html  logic.js  model.js  model.json
